Fix issue with usage of Range in Acoustic data reports.  Added Warnings table to reports